Glove data added

--- a/automatic_image_captioning.ipynb
+++ b/automatic_image_captioning.ipynb
@@ -6,7 +6,7 @@
       "name": "automatic image captioning.ipynb",
       "provenance": [],
       "mount_file_id": "https://github.com/mjain125/AutomaticImageCaptioning/blob/main/automatic_image_captioning.ipynb",
-      "authorship_tag": "ABX9TyPCzyv/Anyv+iVJkbHJjs1S",
+      "authorship_tag": "ABX9TyN7x2DLuJlSRI5Rrm6JL65a",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -41,7 +41,7 @@
         "from google.colab import drive\n",
         "drive.mount('/content/drive')"
       ],
-      "execution_count": 1,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -64,7 +64,7 @@
       "source": [
         "drive.mount(\"/content/drive\", force_remount=True)"
       ],
-      "execution_count": 2,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -109,7 +109,7 @@
         "from keras.preprocessing.text import Tokenizer\n",
         "from keras.preprocessing.sequence import pad_sequences"
       ],
-      "execution_count": 3,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -137,7 +137,7 @@
         "doc = load_doc(filename)\n",
         "print(doc[:300])"
       ],
-      "execution_count": 4,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -186,7 +186,7 @@
         "descriptions = load_descriptions(doc)\n",
         "print('Loaded: %d ' % len(descriptions))"
       ],
-      "execution_count": 5,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -209,7 +209,7 @@
       "source": [
         "list(descriptions.keys())[10:15]\n"
       ],
-      "execution_count": 6,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -241,7 +241,7 @@
       "source": [
         "descriptions['101654506_8eb26cfb60']"
       ],
-      "execution_count": 7,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -289,7 +289,7 @@
         "# cleaning descriptions\n",
         "clean_descriptions(descriptions)"
       ],
-      "execution_count": 8,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -304,7 +304,7 @@
       "source": [
         "descriptions['101654506_8eb26cfb60']"
       ],
-      "execution_count": 9,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -346,7 +346,7 @@
         "vocabulary = to_vocabulary(descriptions)\n",
         "print('Original Vocabulary len: %d' % len(vocabulary))"
       ],
-      "execution_count": 10,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -376,7 +376,7 @@
         "\n",
         "save_descriptions(descriptions, 'descriptions.txt')"
       ],
-      "execution_count": 11,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -408,7 +408,7 @@
         "train = load_set(filename)\n",
         "print('Dataset: %d' % len(train))"
       ],
-      "execution_count": 12,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -430,7 +430,7 @@
         "# Creating a list of all image names in the directory\n",
         "img = glob.glob(images + '*?.jpg')"
       ],
-      "execution_count": 13,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -462,7 +462,7 @@
         "    if i[len(images):] in train_images: # Checking if the image belongs to training set\n",
         "        train_img.append(i) # Adding it to the list of train images"
       ],
-      "execution_count": 14,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -494,7 +494,7 @@
         "    if i[len(images):] in test_images: # Checking if the image belongs to test set\n",
         "        test_img.append(i) # Adding it to the list of test images"
       ],
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -543,7 +543,7 @@
         "train_descriptions = load_clean_descriptions('descriptions.txt', train)\n",
         "print('Descriptions: train=%d' % len(train_descriptions))"
       ],
-      "execution_count": 16,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -571,7 +571,7 @@
         "    x = preprocess_input(x)\n",
         "    return x"
       ],
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -600,7 +600,7 @@
         "# Creating a new model, by removing the last layer (output layer) from the inception v3\n",
         "model_new = Model(model.input, model.layers[-2].output)"
       ],
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "error",
@@ -648,7 +648,7 @@
         "    encoding_train[img[len(images):]] = encode(img)\n",
         "print(\"Time taken in seconds =\", time()-start)"
       ],
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -689,7 +689,7 @@
         "    encoding_test[img[len(images):]] = encode(img)\n",
         "print(\"Time taken in seconds =\", time()-start)"
       ],
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -710,7 +710,7 @@
         "with open(\"/content/drive/MyDrive/flicker8k/Flickr_Data/Pickle_Mridul/encoded_test_images_mridul.pkl\", \"wb\") as encoded_pickle:\n",
         "    pickle.dump(encoding_test, encoded_pickle)"
       ],
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": []
     },
     {
@@ -720,13 +720,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "AYaQ3rAjUJct",
-        "outputId": "1bb01637-7f3b-46de-93b3-11a8176e0fb7"
+        "outputId": "6df2175b-cc33-49d7-9def-18d5e751ec7a"
       },
       "source": [
         "train_features = load(open(\"/content/drive/MyDrive/flicker8k/Flickr_Data/Pickle_Mridul/encoded_train_images_mridul.pkl\", \"rb\"))\n",
         "print('Photos: train=%d' % len(train_features))"
       ],
-      "execution_count": 19,
+      "execution_count": 22,
       "outputs": [
         {
           "output_type": "stream",
@@ -744,7 +744,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "l1MBqq174xPr",
-        "outputId": "1abd2883-1d3c-47bc-ed47-1decbf1c0622"
+        "outputId": "05952fc5-c559-4937-aece-2af519ec8317"
       },
       "source": [
         "# Creating a list of all the training captions\n",
@@ -754,7 +754,7 @@
         "        all_train_captions.append(cap)\n",
         "len(all_train_captions)"
       ],
-      "execution_count": 20,
+      "execution_count": 23,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -766,7 +766,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 20
+          "execution_count": 23
         }
       ]
     },
@@ -777,7 +777,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "ChDi7hDx45c9",
-        "outputId": "51bf682a-3489-4280-8611-6e8bd4aa5592"
+        "outputId": "078c9f88-2bc2-4337-f9ec-6657d7373e20"
       },
       "source": [
         "# Consider only words which occur at least 10 times in the corpus\n",
@@ -792,7 +792,7 @@
         "vocab = [w for w in word_counts if word_counts[w] >= word_count_threshold]\n",
         "print('preprocessed words %d -> %d' % (len(word_counts), len(vocab)))"
       ],
-      "execution_count": 21,
+      "execution_count": 24,
       "outputs": [
         {
           "output_type": "stream",
@@ -818,7 +818,7 @@
         "    ixtoword[ix] = w\n",
         "    ix += 1"
       ],
-      "execution_count": 22,
+      "execution_count": 25,
       "outputs": []
     },
     {
@@ -828,13 +828,13 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "r4dEZQJ45CaX",
-        "outputId": "a62b581a-4413-4143-c094-72cfa01c010f"
+        "outputId": "acd868e1-d5b2-439a-cc20-f60c822588ea"
       },
       "source": [
         "vocab_size = len(ixtoword) + 1 # one for appended 0's\n",
         "vocab_size"
       ],
-      "execution_count": 23,
+      "execution_count": 26,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -846,7 +846,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 23
+          "execution_count": 26
         }
       ]
     },
@@ -857,7 +857,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hp3qPKHc5E_7",
-        "outputId": "8c4e2774-8493-46f7-8937-11141b650b8a"
+        "outputId": "1404c228-858a-4b75-d0ed-900a2d4b19a3"
       },
       "source": [
         "# convert a dictionary of clean descriptions to a list of descriptions\n",
@@ -876,7 +876,7 @@
         "max_length = max_length(train_descriptions)\n",
         "print('Description Length: %d' % max_length)"
       ],
-      "execution_count": 24,
+      "execution_count": 27,
       "outputs": [
         {
           "output_type": "stream",
@@ -924,7 +924,51 @@
         "                X1, X2, y = list(), list(), list()\n",
         "                n=0"
       ],
-      "execution_count": 25,
+      "execution_count": 28,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "N7f_A9Jh7njm",
+        "outputId": "df7815bd-2d75-44c1-ea4d-00b7bb1d795a",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "# Load Glove vectors\n",
+        "embeddings_index = {} # empty dictionary\n",
+        "f = open(\"/content/drive/MyDrive/flicker8k/Flickr_Data/glove/glove.6B.200d.txt\", encoding=\"utf-8\")\n",
+        "\n",
+        "for line in f:\n",
+        "    values = line.split()\n",
+        "    word = values[0]\n",
+        "    coefs = np.asarray(values[1:], dtype='float32')\n",
+        "    embeddings_index[word] = coefs\n",
+        "f.close()\n",
+        "print('Found %s word vectors.' % len(embeddings_index))"
+      ],
+      "execution_count": 29,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Found 400000 word vectors.\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "-lzhWA4m7_H-"
+      },
+      "source": [
+        ""
+      ],
+      "execution_count": null,
       "outputs": []
     }
   ]
