model for our data is created

--- a/automatic_image_captioning.ipynb
+++ b/automatic_image_captioning.ipynb
@@ -6,7 +6,7 @@
       "name": "automatic image captioning.ipynb",
       "provenance": [],
       "mount_file_id": "https://github.com/mjain125/AutomaticImageCaptioning/blob/main/automatic_image_captioning.ipynb",
-      "authorship_tag": "ABX9TyN7x2DLuJlSRI5Rrm6JL65a",
+      "authorship_tag": "ABX9TyOoB09+k/WPPW+/a+ch932t",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -665,7 +665,7 @@
         "id": "n5pCxfVWJVNa"
       },
       "source": [
-        "# Saving the bottleneck train features to disk\n",
+        "# Saving the bottleneck train features to disk to save the time of encoding\n",
         "with open(\"/content/drive/MyDrive/flicker8k/Flickr_Data/Pickle_Mridul/encoded_train_images.pkl\", \"wb\") as encoded_pickle:\n",
         "    pickle.dump(encoding_train, encoded_pickle)"
       ],
@@ -706,7 +706,7 @@
         "id": "YpGo8UQ7Mdt-"
       },
       "source": [
-        "# Saving the bottleneck test features to disk\n",
+        "# Saving the bottleneck test features to disk to save the time of encoding\n",
         "with open(\"/content/drive/MyDrive/flicker8k/Flickr_Data/Pickle_Mridul/encoded_test_images_mridul.pkl\", \"wb\") as encoded_pickle:\n",
         "    pickle.dump(encoding_test, encoded_pickle)"
       ],
@@ -780,7 +780,7 @@
         "outputId": "078c9f88-2bc2-4337-f9ec-6657d7373e20"
       },
       "source": [
-        "# Consider only words which occur at least 10 times in the corpus\n",
+        "# Considering only words which occur at least 10 times in the corpus\n",
         "word_count_threshold = 10\n",
         "word_counts = {}\n",
         "nsents = 0\n",
@@ -860,19 +860,19 @@
         "outputId": "1404c228-858a-4b75-d0ed-900a2d4b19a3"
       },
       "source": [
-        "# convert a dictionary of clean descriptions to a list of descriptions\n",
+        "# converting a dictionary of clean descriptions to a list of descriptions\n",
         "def to_lines(descriptions):\n",
         "\tall_desc = list()\n",
         "\tfor key in descriptions.keys():\n",
         "\t\t[all_desc.append(d) for d in descriptions[key]]\n",
         "\treturn all_desc\n",
         "\n",
-        "# calculate the length of the description with the most words\n",
+        "# calculating the length of the description with the most words\n",
         "def max_length(descriptions):\n",
         "\tlines = to_lines(descriptions)\n",
         "\treturn max(len(d.split()) for d in lines)\n",
         "\n",
-        "# determine the maximum sequence length\n",
+        "# determining the maximum sequence length\n",
         "max_length = max_length(train_descriptions)\n",
         "print('Description Length: %d' % max_length)"
       ],
@@ -901,43 +901,43 @@
         "    while 1:\n",
         "        for key, desc_list in descriptions.items():\n",
         "            n+=1\n",
-        "            # retrieve the photo feature\n",
+        "            # retrieving the photo feature\n",
         "            photo = photos[key+'.jpg']\n",
         "            for desc in desc_list:\n",
-        "                # encode the sequence\n",
+        "                # encoding the sequence\n",
         "                seq = [wordtoix[word] for word in desc.split(' ') if word in wordtoix]\n",
-        "                # split one sequence into multiple X, y pairs\n",
+        "                # splitting one sequence into multiple X, y pairs\n",
         "                for i in range(1, len(seq)):\n",
-        "                    # split into input and output pair\n",
+        "                    # splitting into input and output pair\n",
         "                    in_seq, out_seq = seq[:i], seq[i]\n",
-        "                    # pad input sequence\n",
+        "                    # pading input sequence\n",
         "                    in_seq = pad_sequences([in_seq], maxlen=max_length)[0]\n",
-        "                    # encode output sequence\n",
+        "                    # encoding output sequence\n",
         "                    out_seq = to_categorical([out_seq], num_classes=vocab_size)[0]\n",
-        "                    # store\n",
+        "                    # storing\n",
         "                    X1.append(photo)\n",
         "                    X2.append(in_seq)\n",
         "                    y.append(out_seq)\n",
-        "            # yield the batch data\n",
+        "            # yielding the batch data\n",
         "            if n==num_photos_per_batch:\n",
         "                yield [[array(X1), array(X2)], array(y)]\n",
         "                X1, X2, y = list(), list(), list()\n",
         "                n=0"
       ],
-      "execution_count": 28,
+      "execution_count": 33,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "N7f_A9Jh7njm",
-        "outputId": "df7815bd-2d75-44c1-ea4d-00b7bb1d795a",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "N7f_A9Jh7njm",
+        "outputId": "8eb5dc38-5676-4a4e-a733-e7263a88ee20"
       },
       "source": [
-        "# Load Glove vectors\n",
+        "# Loading Glove vectors\n",
         "embeddings_index = {} # empty dictionary\n",
         "f = open(\"/content/drive/MyDrive/flicker8k/Flickr_Data/glove/glove.6B.200d.txt\", encoding=\"utf-8\")\n",
         "\n",
@@ -949,7 +949,7 @@
         "f.close()\n",
         "print('Found %s word vectors.' % len(embeddings_index))"
       ],
-      "execution_count": 29,
+      "execution_count": 34,
       "outputs": [
         {
           "output_type": "stream",
@@ -963,13 +963,123 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "-lzhWA4m7_H-"
+        "id": "En_1Gk2LOPl_"
       },
       "source": [
-        ""
+        "embedding_dim = 200\n",
+        "\n",
+        "# Get 200-dim dense vector for each of the 10000 words in out vocabulary\n",
+        "embedding_matrix = np.zeros((vocab_size, embedding_dim))\n",
+        "\n",
+        "for word, i in wordtoix.items():\n",
+        "    #if i < max_words:\n",
+        "    embedding_vector = embeddings_index.get(word)\n",
+        "    if embedding_vector is not None:\n",
+        "        # Words not found in the embedding index will be all zeros\n",
+        "        embedding_matrix[i] = embedding_vector"
       ],
-      "execution_count": null,
+      "execution_count": 35,
       "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "-lzhWA4m7_H-",
+        "outputId": "e44b7b3c-e33f-465b-98f3-8bb1fddedcc5"
+      },
+      "source": [
+        "embedding_matrix.shape"
+      ],
+      "execution_count": 36,
+      "outputs": [
+        {
+          "output_type": "execute_result",
+          "data": {
+            "text/plain": [
+              "(1652, 200)"
+            ]
+          },
+          "metadata": {
+            "tags": []
+          },
+          "execution_count": 36
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0ALxU5HLOBk2"
+      },
+      "source": [
+        "inputs1 = Input(shape=(2048,))\n",
+        "fe1 = Dropout(0.5)(inputs1)\n",
+        "fe2 = Dense(256, activation='relu')(fe1)\n",
+        "inputs2 = Input(shape=(max_length,))\n",
+        "se1 = Embedding(vocab_size, embedding_dim, mask_zero=True)(inputs2)\n",
+        "se2 = Dropout(0.5)(se1)\n",
+        "se3 = LSTM(256)(se2)\n",
+        "decoder1 = add([fe2, se3])\n",
+        "decoder2 = Dense(256, activation='relu')(decoder1)\n",
+        "outputs = Dense(vocab_size, activation='softmax')(decoder2)\n",
+        "model = Model(inputs=[inputs1, inputs2], outputs=outputs)"
+      ],
+      "execution_count": 37,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "diRBOODdOahl",
+        "outputId": "6b02a3b7-d784-4579-b0de-b5e6770237af",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "model.summary()"
+      ],
+      "execution_count": 38,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "Model: \"model_1\"\n",
+            "__________________________________________________________________________________________________\n",
+            "Layer (type)                    Output Shape         Param #     Connected to                     \n",
+            "==================================================================================================\n",
+            "input_3 (InputLayer)            [(None, 34)]         0                                            \n",
+            "__________________________________________________________________________________________________\n",
+            "input_2 (InputLayer)            [(None, 2048)]       0                                            \n",
+            "__________________________________________________________________________________________________\n",
+            "embedding (Embedding)           (None, 34, 200)      330400      input_3[0][0]                    \n",
+            "__________________________________________________________________________________________________\n",
+            "dropout (Dropout)               (None, 2048)         0           input_2[0][0]                    \n",
+            "__________________________________________________________________________________________________\n",
+            "dropout_1 (Dropout)             (None, 34, 200)      0           embedding[0][0]                  \n",
+            "__________________________________________________________________________________________________\n",
+            "dense (Dense)                   (None, 256)          524544      dropout[0][0]                    \n",
+            "__________________________________________________________________________________________________\n",
+            "lstm (LSTM)                     (None, 256)          467968      dropout_1[0][0]                  \n",
+            "__________________________________________________________________________________________________\n",
+            "add (Add)                       (None, 256)          0           dense[0][0]                      \n",
+            "                                                                 lstm[0][0]                       \n",
+            "__________________________________________________________________________________________________\n",
+            "dense_1 (Dense)                 (None, 256)          65792       add[0][0]                        \n",
+            "__________________________________________________________________________________________________\n",
+            "dense_2 (Dense)                 (None, 1652)         424564      dense_1[0][0]                    \n",
+            "==================================================================================================\n",
+            "Total params: 1,813,268\n",
+            "Trainable params: 1,813,268\n",
+            "Non-trainable params: 0\n",
+            "__________________________________________________________________________________________________\n"
+          ],
+          "name": "stdout"
+        }
+      ]
     }
   ]
 }
