Iterating the model and saving it

--- a/automatic_image_captioning.ipynb
+++ b/automatic_image_captioning.ipynb
@@ -6,7 +6,7 @@
       "name": "automatic image captioning.ipynb",
       "provenance": [],
       "mount_file_id": "https://github.com/mjain125/AutomaticImageCaptioning/blob/main/automatic_image_captioning.ipynb",
-      "authorship_tag": "ABX9TyPH80D1VHbCeYhEPhshODh7",
+      "authorship_tag": "ABX9TyMBGLUhMvdRtf7pqTx4W3ry",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -107,9 +107,10 @@
         "from keras import optimizers\n",
         "from keras.applications.inception_v3 import preprocess_input\n",
         "from keras.preprocessing.text import Tokenizer\n",
-        "from keras.preprocessing.sequence import pad_sequences"
+        "from keras.preprocessing.sequence import pad_sequences\n",
+        "from keras.utils.np_utils import to_categorical"
       ],
-      "execution_count": 3,
+      "execution_count": 42,
       "outputs": []
     },
     {
@@ -437,10 +438,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "Bh7yTRrXrqLH",
-        "outputId": "972dbbcf-c15c-41dd-ed8c-2117bde08672",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "972dbbcf-c15c-41dd-ed8c-2117bde08672"
       },
       "source": [
         "img"
@@ -1486,10 +1487,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "-SyrtFsExcXm",
-        "outputId": "0d04dc48-c4c0-4e41-9330-ffce9b101c8c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "0d04dc48-c4c0-4e41-9330-ffce9b101c8c"
       },
       "source": [
         "train_img"
@@ -2535,10 +2536,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "tFge2C-ayAfT",
-        "outputId": "0a98a9d7-368f-4fd7-f416-a20ff67d1d98",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "0a98a9d7-368f-4fd7-f416-a20ff67d1d98"
       },
       "source": [
         "test_img"
@@ -3628,10 +3629,10 @@
       "cell_type": "code",
       "metadata": {
         "id": "rV2gLkS21SFc",
-        "outputId": "b48fee61-92ca-489f-e8b4-fb101ed189a1",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "outputId": "b48fee61-92ca-489f-e8b4-fb101ed189a1"
       },
       "source": [
         "# Loading the inception v3 model\n",
@@ -3955,11 +3956,11 @@
         "                    y.append(out_seq)\n",
         "            # yielding the batch data\n",
         "            if n==num_photos_per_batch:\n",
-        "                yield [[array(X1), array(X2)], array(y)]\n",
+        "                yield ((array(X1), array(X2)), array(y))\n",
         "                X1, X2, y = list(), list(), list()\n",
         "                n=0"
       ],
-      "execution_count": 30,
+      "execution_count": 67,
       "outputs": []
     },
     {
@@ -3969,7 +3970,7 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "N7f_A9Jh7njm",
-        "outputId": "753bb1e5-a841-4f45-c456-03532bfd387b"
+        "outputId": "2ebe0ecc-8f12-4d29-a32c-67756a34aeb1"
       },
       "source": [
         "# Loading Glove vectors\n",
@@ -3984,7 +3985,7 @@
         "f.close()\n",
         "print('Found %s word vectors.' % len(embeddings_index))"
       ],
-      "execution_count": 31,
+      "execution_count": 68,
       "outputs": [
         {
           "output_type": "stream",
@@ -4013,7 +4014,7 @@
         "        # Words not found in the embedding index will be all zeros\n",
         "        embedding_matrix[i] = embedding_vector"
       ],
-      "execution_count": 32,
+      "execution_count": 69,
       "outputs": []
     },
     {
@@ -4023,12 +4024,12 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "-lzhWA4m7_H-",
-        "outputId": "76bf6d4b-7b61-40ec-f254-77c9343f4394"
+        "outputId": "a10e8cf7-c2e4-427d-955e-3ac478015a6c"
       },
       "source": [
         "embedding_matrix.shape"
       ],
-      "execution_count": 33,
+      "execution_count": 70,
       "outputs": [
         {
           "output_type": "execute_result",
@@ -4040,7 +4041,7 @@
           "metadata": {
             "tags": []
           },
-          "execution_count": 33
+          "execution_count": 70
         }
       ]
     },
@@ -4062,7 +4063,7 @@
         "outputs = Dense(vocab_size, activation='softmax')(decoder2)\n",
         "model = Model(inputs=[inputs1, inputs2], outputs=outputs)"
       ],
-      "execution_count": 34,
+      "execution_count": 71,
       "outputs": []
     },
     {
@@ -4072,40 +4073,40 @@
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
-        "outputId": "2fd7fd5e-6479-4b39-aa13-b98d0f94fffc"
+        "outputId": "ddd7ecd6-024c-41e6-b928-ad795e0b8977"
       },
       "source": [
         "model.summary()"
       ],
-      "execution_count": 35,
+      "execution_count": 72,
       "outputs": [
         {
           "output_type": "stream",
           "text": [
-            "Model: \"model_1\"\n",
+            "Model: \"model_7\"\n",
             "__________________________________________________________________________________________________\n",
             "Layer (type)                    Output Shape         Param #     Connected to                     \n",
             "==================================================================================================\n",
-            "input_3 (InputLayer)            [(None, 34)]         0                                            \n",
+            "input_17 (InputLayer)           [(None, 34)]         0                                            \n",
             "__________________________________________________________________________________________________\n",
-            "input_2 (InputLayer)            [(None, 2048)]       0                                            \n",
+            "input_16 (InputLayer)           [(None, 2048)]       0                                            \n",
             "__________________________________________________________________________________________________\n",
-            "embedding (Embedding)           (None, 34, 200)      330400      input_3[0][0]                    \n",
+            "embedding_7 (Embedding)         (None, 34, 200)      330400      input_17[0][0]                   \n",
             "__________________________________________________________________________________________________\n",
-            "dropout (Dropout)               (None, 2048)         0           input_2[0][0]                    \n",
+            "dropout_14 (Dropout)            (None, 2048)         0           input_16[0][0]                   \n",
             "__________________________________________________________________________________________________\n",
-            "dropout_1 (Dropout)             (None, 34, 200)      0           embedding[0][0]                  \n",
+            "dropout_15 (Dropout)            (None, 34, 200)      0           embedding_7[0][0]                \n",
             "__________________________________________________________________________________________________\n",
-            "dense (Dense)                   (None, 256)          524544      dropout[0][0]                    \n",
+            "dense_21 (Dense)                (None, 256)          524544      dropout_14[0][0]                 \n",
             "__________________________________________________________________________________________________\n",
-            "lstm (LSTM)                     (None, 256)          467968      dropout_1[0][0]                  \n",
+            "lstm_7 (LSTM)                   (None, 256)          467968      dropout_15[0][0]                 \n",
             "__________________________________________________________________________________________________\n",
-            "add (Add)                       (None, 256)          0           dense[0][0]                      \n",
-            "                                                                 lstm[0][0]                       \n",
+            "add_7 (Add)                     (None, 256)          0           dense_21[0][0]                   \n",
+            "                                                                 lstm_7[0][0]                     \n",
             "__________________________________________________________________________________________________\n",
-            "dense_1 (Dense)                 (None, 256)          65792       add[0][0]                        \n",
+            "dense_22 (Dense)                (None, 256)          65792       add_7[0][0]                      \n",
             "__________________________________________________________________________________________________\n",
-            "dense_2 (Dense)                 (None, 1652)         424564      dense_1[0][0]                    \n",
+            "dense_23 (Dense)                (None, 1652)         424564      dense_22[0][0]                   \n",
             "==================================================================================================\n",
             "Total params: 1,813,268\n",
             "Trainable params: 1,813,268\n",
@@ -4119,28 +4120,28 @@
     {
       "cell_type": "code",
       "metadata": {
-        "id": "MD0omi4W5mxe",
-        "outputId": "53a5cc98-1699-4575-d79e-e767268cdc5c",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "MD0omi4W5mxe",
+        "outputId": "0787c2d7-553a-46ae-f4d0-7c475d1b1e37"
       },
       "source": [
         "model.layers[2]"
       ],
-      "execution_count": 36,
+      "execution_count": 73,
       "outputs": [
         {
           "output_type": "execute_result",
           "data": {
             "text/plain": [
-              "<keras.layers.embeddings.Embedding at 0x7f7265560110>"
+              "<keras.layers.embeddings.Embedding at 0x7f7255e72510>"
             ]
           },
           "metadata": {
             "tags": []
           },
-          "execution_count": 36
+          "execution_count": 73
         }
       ]
     },
@@ -4153,7 +4154,7 @@
         "model.layers[2].set_weights([embedding_matrix])\n",
         "model.layers[2].trainable = False\n"
       ],
-      "execution_count": 37,
+      "execution_count": 74,
       "outputs": []
     },
     {
@@ -4164,13 +4165,151 @@
       "source": [
         "model.compile(loss='categorical_crossentropy', optimizer='adam')\n"
       ],
-      "execution_count": 38,
+      "execution_count": 75,
       "outputs": []
     },
     {
       "cell_type": "code",
       "metadata": {
-        "id": "Q-Mf5yqwUCPw"
+        "id": "NOxB7HVFVLSK"
+      },
+      "source": [
+        "epochs = 10\n",
+        "number_pics_per_bath = 3\n",
+        "steps = len(train_descriptions)//number_pics_per_bath"
+      ],
+      "execution_count": 76,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "Q-Mf5yqwUCPw",
+        "outputId": "8725aed0-9961-469f-fb25-8612b3e0a101"
+      },
+      "source": [
+        "for i in range(epochs):\n",
+        "    generator = data_generator(train_descriptions, train_features, wordtoix, max_length, number_pics_per_bath)\n",
+        "    model.fit_generator(generator, epochs=1, steps_per_epoch=steps, verbose=1)\n",
+        "    model.save('./model_weights/model_' + str(i) + '.h5')"
+      ],
+      "execution_count": 78,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/keras/engine/training.py:1915: UserWarning: `Model.fit_generator` is deprecated and will be removed in a future version. Please use `Model.fit`, which supports generators.\n",
+            "  warnings.warn('`Model.fit_generator` is deprecated and '\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "2000/2000 [==============================] - 761s 381ms/step - loss: 2.6988\n"
+          ],
+          "name": "stdout"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/keras/utils/generic_utils.py:497: CustomMaskWarning: Custom mask layers require a config and must override get_config. When loading, the custom mask layer must be passed to the custom_objects argument.\n",
+            "  category=CustomMaskWarning)\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "2000/2000 [==============================] - 761s 381ms/step - loss: 2.6704\n",
+            "2000/2000 [==============================] - 772s 386ms/step - loss: 2.6474\n",
+            "2000/2000 [==============================] - 771s 386ms/step - loss: 2.6243\n",
+            "2000/2000 [==============================] - 768s 384ms/step - loss: 2.6074\n",
+            "2000/2000 [==============================] - 771s 385ms/step - loss: 2.5915\n",
+            "2000/2000 [==============================] - 775s 387ms/step - loss: 2.5751\n",
+            "2000/2000 [==============================] - 773s 387ms/step - loss: 2.5603\n",
+            "2000/2000 [==============================] - 771s 385ms/step - loss: 2.5460\n",
+            "2000/2000 [==============================] - 767s 384ms/step - loss: 2.5363\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "sdPH3a6fVM1B"
+      },
+      "source": [
+        "model.optimizer.lr = 0.0001\n",
+        "epochs = 10\n",
+        "number_pics_per_bath = 6\n",
+        "steps = len(train_descriptions)//number_pics_per_bath"
+      ],
+      "execution_count": 79,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "ExqH_4opVG_R",
+        "outputId": "517bf393-c378-4a8e-cf24-ca00dcbc42f7",
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        }
+      },
+      "source": [
+        "for i in range(epochs):\n",
+        "    generator = data_generator(train_descriptions, train_features, wordtoix, max_length, number_pics_per_bath)\n",
+        "    model.fit_generator(generator, epochs=1, steps_per_epoch=steps, verbose=1)\n",
+        "    model.save('./model_weights/model_' + str(i) + '.h5')"
+      ],
+      "execution_count": 80,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "text": [
+            "/usr/local/lib/python3.7/dist-packages/keras/engine/training.py:1915: UserWarning: `Model.fit_generator` is deprecated and will be removed in a future version. Please use `Model.fit`, which supports generators.\n",
+            "  warnings.warn('`Model.fit_generator` is deprecated and '\n"
+          ],
+          "name": "stderr"
+        },
+        {
+          "output_type": "stream",
+          "text": [
+            "1000/1000 [==============================] - 720s 720ms/step - loss: 2.5127\n",
+            "1000/1000 [==============================] - 717s 717ms/step - loss: 2.4611\n",
+            "1000/1000 [==============================] - 732s 732ms/step - loss: 2.4427\n",
+            "1000/1000 [==============================] - 726s 726ms/step - loss: 2.4270\n",
+            "1000/1000 [==============================] - 724s 724ms/step - loss: 2.4164\n",
+            "1000/1000 [==============================] - 729s 729ms/step - loss: 2.4085\n",
+            "1000/1000 [==============================] - 732s 732ms/step - loss: 2.4016\n",
+            "1000/1000 [==============================] - 745s 745ms/step - loss: 2.3943\n",
+            "1000/1000 [==============================] - 756s 756ms/step - loss: 2.3878\n",
+            "1000/1000 [==============================] - 746s 746ms/step - loss: 2.3830\n"
+          ],
+          "name": "stdout"
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "0TwvtPiiVVCn"
+      },
+      "source": [
+        "model.save_weights('./model_weights/model_30.h5')"
+      ],
+      "execution_count": 85,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "metadata": {
+        "id": "kyuX0sYkzjRt"
       },
       "source": [
         ""
